--- a/react-examples/src/App.css
+++ b/react-examples/src/App.css
@@ -1,3 +1,19 @@
-body{
-  border: 4px solid greenyellow;
+
+.xy{
+  background-color: aqua;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+.xyz{
+  width: 20rem;
+  height: 3rem;
+}
+.xyza{
+  padding: 5px ;
+  border-radius: 10px;
+  margin-top: 5px;
+  background-color: cadetblue;
 }
