--- a/react-examples/src/App.css
+++ b/react-examples/src/App.css
@@ -1,4 +1,27 @@
+.rams{
+  border: 2px solid red;
+  background-color: black;
+  display: flex;
+  justify-content: space-evenly;
+  
+  color: floralwhite;
+  width: 1000px;
+  height: 100px;
+  text-align: end;
 
+}
+.rams ul li{
+  display: inline-flex;
+  
+
+  list-style: none;
+  margin: 20px;
+  
+  font-size: medium;
+  color: white;
+  
+  
+}
 .xy{
   background-color: aqua;
   display: flex;
@@ -17,3 +40,4 @@
   margin-top: 5px;
   background-color: cadetblue;
 }
+
